# aegis-oss

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_ja.md  SECURITY.md  action.yml  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: aegis-review.yml  ci.yml
aegis_gov/: __init__.py  api.py  cli.py
aegis_gov/council/: __init__.py  agents.py  boardroom.py  rule_engine.py  schemas.py  security.py
aegis_gov/council/prompts/: devils_advocate.prompt  manifesto.md  skeptic.prompt
docker/: Dockerfile  docker-compose.yml
docs/: index.html  ja.html
examples/: custom_agents.py  quick_start.py  rule_engine_demo.py
tests/: test_agents.py  test_rule_engine.py  test_schemas.py  test_streaming.py
