[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-gov"
version = "0.1.0"
description = "Governance-first framework for AI agent systems — structured boardroom meetings, rule engine, and mandatory red team review"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "AEGIS Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.0"]
api = ["fastapi>=0.115.0", "uvicorn>=0.30.0"]
all = ["aegis-gov[anthropic,openai,api]"]
dev = [
    "aegis-gov[all]",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
aegis = "aegis_gov.cli:main"

[project.urls]
Homepage = "https://github.com/pyonkichi369/aegis-oss"
Repository = "https://github.com/pyonkichi369/aegis-oss"
Documentation = "https://github.com/pyonkichi369/aegis-oss#readme"
Issues = "https://github.com/pyonkichi369/aegis-oss/issues"

[tool.hatch.build.targets.wheel]
packages = ["aegis_gov"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
